[package]
name = "ip_sniffer"
version = "0.1.0"
authors = ["amrrobbyn <amr.robb@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9.12", features = ["derive", "bright-color"] }
tokio = { version = "1", features = ["full"] }